Of course. Here is a comprehensive `README.md` template based on your provided keywords and project name. It's structured to be easily filled out with your project's specific details.
This template assumes your project is a monorepo containing different components (web, desktop, servers, etc.).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,12 @@
         "flet",
         "funcall",
         "iptional",
+        "LBLIBS",
         "lexenv",
         "localn",
         "macroexpand",
         "optinal",
-        "Tauri"
+        "Tauri",
+        "Wextra"
     ]
 }
